# jobaid

./: .env  jobaid.xlsx  prerequisits.txt  pyproject.toml  questions.csv  requirements.txt
website/: __init__.py  auth.py  models.py  score_model.py  views.py
website/static/css/: style.css
website/static/js/: ai_interview.js  audio.js  checkboxes.js  create_interview.js  delete_interview.js  delete_question_in_interview.js  display_table.js  filter_form.js  final_selected_question.js  index.js  list_interviews.js  performance_scores.js  proceed_final_questions.js  render_final_questions.js  score_answer.js  view_interview.js
website/templates/: ai_interview.html  audio.html  base.html  filter_form.html  final_questions.html  home.html  login.html  logout.html  performance_scores.html  signup.html  view_interview.html  view_questions.html
