[project]
name = "jobaid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.1.1",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.3",
    "gunicorn>=23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "psycopg2==2.9.10",
    "psycopg2-binary==2.9.10",
    "pydub>=0.25.1",
    "pymysql>=1.1.2",
    "python-dotenv==1.1.0",
    "sentence-transformers>=5.1.2",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.0",
    "vosk>=0.3.45",
    "werkzeug==3.1.3",
]
